--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -6,7 +6,7 @@
     justify-content: center;
     background-size: cover;
     background-position: center;
-    background-image: url('https://scontent.ftsr1-1.fna.fbcdn.net/v/t39.30808-6/392749709_340612028477969_7039736014540575980_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=783fdb&_nc_eui2=AeFntz-M0xBBFzf0744zjTDBa6H8I0WzoHhrofwjRbOgeCLjJVnL6FPbq2ElzkLETV-sgXoY0tl24hCbYImDUxLD&_nc_ohc=oY3yAsuBoAQAX87TW4Y&_nc_ht=scontent.ftsr1-1.fna&oh=00_AfAeBfXTzaOXPkwx5_qWjmEDiTOnV7aVb0bxoxYLAmbJcg&oe=657CF408');
+    background-image: url('https://scontent.ftsr1-1.fna.fbcdn.net/v/t39.30808-6/392749709_340612028477969_7039736014540575980_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=783fdb&_nc_ohc=u4StlqdbVRYAX9SmRhr&_nc_ht=scontent.ftsr1-1.fna&oh=00_AfCnVfcViB9VYX8eTCA8qDhN9DOm82TpvGJrEopwsBzuwg&oe=6584DD08');
   }
   
   
