--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -225,7 +225,7 @@
       margin-left: 10px;
       padding: 6px 8px;
       max-width: calc((100%) - 60px);
-      font-size: 10px;
+      font-size: 16px;
       font-weight: 700;
       color: #fff;
       background-color: #1f98f4;
@@ -243,7 +243,7 @@
       margin-left: 10px;
       padding: 6px 8px;
       max-width: calc((100%) - 60px);
-      font-size: 8px;
+      font-size: 14px;
       font-weight: 700;
       color: #fff;
       background-color: #1f98f4;
@@ -263,5 +263,18 @@
       text-decoration: none;
     }
     
+
+  }
+
+
+
+  @media only screen and (max-width: 380px) {
+
+    .news-padding{
+
+      width: 16rem;
+      height: 16rem;
+    }
+
 
   }
