--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -18,7 +18,7 @@
     background: #fff;
     justify-content: center;
     align-items: center;
-    max-width: 600px; /* Adjust the maximum width of the modal */
+    max-width: 2000px; /* Adjust the maximum width of the modal */
     width: 100%;
     padding: 40px; /* Adjust padding to increase the height */
     box-sizing: border-box;
@@ -46,25 +46,154 @@
 
  
   h2{
+    
     padding: 1rem 0;
   }
   
   /* Add additional styling as needed */
 
+
+
+
+  @media screen and (max-width: 280px) and (orientation: landscape) {
+
+
+    .modalContainer {
+      width: 130px;
+     
+      flex-direction: column;
+      padding: 0px ;
+    }
   
-  @media screen and (max-width: 480px) {
+   
+  
+    p {
+      font-size: 0.7em ; 
+    }
+  
+    h2 {
+      font-size: 1em ; 
+      padding: 0.5rem 0 ; 
+    }
+
+
+    .MuiBox-root,css-d0uhtl{
+      font-size: 10px;
+    }
+
+
+  }
+
+
+  @media screen and (min-width: 121px) and (max-width: 280px) {
 
 
     .modalContainer {
-        display: flex;
-        flex-direction: column;
-        background: #fff;
-        max-width: 370px; /* Adjust the maximum width of the modal */
-        width: 100%;
         padding: 20px;
-        box-sizing: border-box;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        width: 220px;
+        flex-direction: column;
+      }
+    
+
+      .content{
+        font-size: 0.6em;
+      }
+     
+    
+      p {
+        font-size: 0.7em ;
+
+      }
+      h2 {
+        font-size: 1em ;
+        padding: 1rem 0 ;
+      }
+      .css-iljtu2-MuiRating-root{
+        font-size: 1rem !important ;
+      }
+  
+      .css-d0uhtl{
+        font-size: 1em;
+      }
+
+  }
+
+
+
+   @media screen and (min-width: 281px) and (max-width: 380px) {
+
+
+    .modalContainer {
+        padding: 20px;
+        width: 260px;
+        flex-direction: column;
+      }
+    
+
+      .content{
+        font-size: 0.6em;
+      }
+     
+    
+      p {
+        font-size: 1em ;
+
+      }
+      h2 {
+        font-size: 1.4em ;
+        padding: 1rem 0 ;
+      }
+
+      .css-iljtu2-MuiRating-root{
+        font-size: 1.2rem !important ;
+      }
+  
+      .css-d0uhtl{
+        font-size: 1em;
+      }
+      
+
+  }
+
+
+  @media screen and (min-height: 280px) and (max-height: 450px) and (orientation: landscape) {
+
+
+    .modalContainer {
+      width: 500px !important;
+     
+      flex-direction: row !important;
+      padding: 0px ;
+    }
+  
+   
+  
+    p {
+      font-size: 0.7em !important ; 
+    }
+  
+    h2 {
+      font-size: 1em  !important; 
+      padding: 0.5rem 0 ; 
+    }
+
+
+    .css-d0uhtl{
+      font-size: 1em;
+    }
+
+
+  }
+
+
+    
+  @media screen and (min-width: 381px) and (max-width: 480px) {
+
+
+    .modalContainer {
+        width: 315px ; 
+        padding: 20px;
+        flex-direction: column;
       }
 
       .content{
@@ -77,68 +206,66 @@
         font-size: 1em;
 
       }
-      .h2{
-        font-size: 0.6em;
+      h2{
+        font-size: 1.6em;
         padding: 2rem 0;
       }
 
+
+    .css-iljtu2-MuiRating-root{
+      font-size: 1rem ;
+    }
+
+    .css-d0uhtl{
+      font-size: 1.2em;
+    }
+
   }
 
 
 
-   @media screen and (max-width: 380px) {
+
+  /* @media screen and (max-height: 680px) and (orientation: landscape) {
 
 
     .modalContainer {
-        display: flex;
-        flex-direction: column;
-        background: #fff;
-        max-width: 260px; /* Adjust the maximum width of the modal */
-        width: 100%;
-        padding: 20px;
-        box-sizing: border-box;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-      }
-      .modalImage {
-        width: 100%; /* Make the image take 100% of the container width */
-        height: auto;
-        object-fit: cover;
-        max-height: 200px; /* Adjust the max height as needed */
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
-      }
+      width: 450px ;
 
-      .content{
-        font-size: 0.6em;
-      }
      
-    
-      p{
-        font-size: 1em;
+      flex-direction: column;
+      padding: 40px ;
+    }
+  
+   
+  
+    p {
+      font-size: 0.7em ; 
+    }
+  
+    h2 {
+      font-size: 1em ; 
+      padding: 0.5rem 0 ; 
+    }
 
-      }
-      .h2{
-        font-size: 0.3em;
-        padding: 1rem 0;
-      }
 
-  }
+    .MuiBox-root,css-d0uhtl{
+      font-size: 10px;
+    }
 
 
-  @media screen and (max-width: 780px) {
+  } */
+
+
+
+
+
+  @media screen and (min-width: 481px) and (max-width: 780px) {
 
 
     .modalContainer {
-        display: flex;
-        flex-direction: column;
-        background: #fff;
-        max-width: 770px; /* Adjust the maximum width of the modal */
-        width: 100%;
+        width: 450px; 
         padding: 20px;
-        box-sizing: border-box;
-        border-radius: 8px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        flex-direction: column;
       }
 
       .content{
@@ -147,13 +274,104 @@
       
      
     
-      p{
-        font-size: 1em;
+      p {
+        font-size: 1em ;
 
       }
-      .h2{
-        font-size: 0.6em;
+      h2 {
+        font-size: 1.6em ;
+        padding: 2rem 0 ;
+      }
+
+  }
+
+
+  @media screen and (min-width: 781px) and (max-width: 1024px) {
+
+
+    .modalContainer {
+        max-width: 850px; 
+        padding: 20px;
+        
+      }
+
+      .content{
+        font-size: 0.7em;
+      }
+      
+     
+    
+      p {
+        font-size: 1.3em;
+
+      }
+      h2 {
+        font-size: 2em;
         padding: 2rem 0;
       }
 
+  }
+
+
+
+
+
+  @media screen and (min-width: 1025px) and (max-width: 1440px){
+
+
+    .modalContainer {
+
+      width: 1250px;
+    
+    }
+
+    .content h2{
+      font-size: 2.1em ;
+    }
+
+    .content p {
+      font-size: 1.5em ;
+    }
+
+    .css-iljtu2-MuiRating-root{
+      font-size: 2rem !important ;
+    }
+
+    .css-d0uhtl{
+      font-size: 2em;
+    }
+  
+
+  }
+
+
+  @media screen and (min-width: 1441px) and (max-width: 2560px){
+
+    .modalContainer{
+      display: flex;
+      background: #fff;
+      justify-content: center;
+      align-items: center;
+      width: 1600px; /* Adjust the maximum width of the modal */
+      padding: 40px; /* Adjust padding to increase the height */
+      box-sizing: border-box;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    }
+
+    .content h2{
+      font-size: 2.4em ;
+    }
+
+    .content p {
+      font-size: 1.8em ;
+    }
+
+    .css-iljtu2-MuiRating-root{
+      font-size: 3rem  !important;
+    }
+
+    .css-d0uhtl{
+      font-size: 2.4em;
+    }
   }
