--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -47,7 +47,7 @@
     grid-gap: 10px;
     list-style: none;
     text-align: center;
-    width: 60vw;
+    width: 44vw;
     justify-content: end;
     margin-right: 2rem;
   }
@@ -177,7 +177,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 45vh;
+        height: 420px;
         position: absolute;
         top: 80px;
         left: -200%;
@@ -256,32 +256,39 @@
 
   }
 
-  /* @media screen and (max-width: 791px) {
-    .NavbarItems {
-        position: relative;
-      }
 
-    .navbar-logo  {
-      
-        top: 0;
-        left: 0;
-        transform: translate(-80%, 0%);
-      }
+  @media screen and (max-width: 991px) and (orientation: landscape)  {
 
-      .nav-menu {
-        display: flex;
-        flex-direction: column;
-        width: 100%;
-        height: 90vh;
-        position: absolute;
-        top: 80px;
-        left: -100%;
-        opacity: 1;
-        transition: all 0.5s ease;
-      }
+    .nav-menu {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 320px;
+      position: absolute;
+      top: 80px;
+      left: -100%;
+      opacity: 1;
+      transition: all 0.5s ease;
+    }
+
+    .nav-item{
+
+      font-size: 15px;
+      height: 45px !important;
+    }
+
+    .nav-links{
+      padding: 0rem;
+    }
+
+    .nav-links-mobile{
+      margin: 20px auto;
+      width: 40%;
+      font-size: 1rem;
+    }
 
 
-  } */
+  }
 
 
   @media screen and (max-width: 561px) {
@@ -308,7 +315,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 55vh;
+        height: 420px;
         position: absolute;
         top: 80px;
         left: -100%;
@@ -321,7 +328,7 @@
 
 
 
-  @media screen and (max-width: 380px) {
+  @media screen and (max-width: 425px) {
     .NavbarItems {
         position: relative;
       }
@@ -344,7 +351,7 @@
         display: flex;
         flex-direction: column;
         width: 100%;
-        height: 60vh;
+        height: 420px;
         position: absolute;
         top: 80px;
         left: -100%;
@@ -360,7 +367,7 @@
         border-radius: 4px;
         width: 55%;
         text-decoration: none;
-        font-size: 1.5rem;
+        font-size: 1.3rem;
         background-color: transparent;
         color: #fff;
         padding: 14px 20px;
@@ -371,3 +378,41 @@
 
 
   }
+
+
+
+  @media screen and (max-width: 425px) and (orientation: landscape)  {
+
+
+    .nav-menu {
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      height: 80vh;
+      position: absolute;
+      top: 80px;
+      left: -100%;
+      opacity: 1;
+      transition: all 0.5s ease;
+    }
+
+    .nav-item{
+
+      font-size: 15px;
+      height: 45px !important;
+    }
+
+    .nav-links{
+      padding: 0rem;
+    }
+
+    .nav-links-mobile{
+      margin: 30px auto;
+      width: 40%;
+      font-size: 1rem;
+    }
+
+
+
+  }
+
