--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -5,10 +5,11 @@
     position: fixed;
     z-index: -1;
  }
+ 
 
  .hero-container{
 
-    height: 95vh;
+    height:100svh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -46,7 +47,7 @@
     margin-left:  4px;
  }
 
- @media screen and (max-width:960px) {
+ @media screen and (max-width:960px) and (min-width:768px) {
 
     .hero-container >h1 {
 
@@ -57,7 +58,7 @@
 
  }
 
- @media screen and (max-width:768px){
+ @media screen and (max-width:768px) and (min-width:540px){
     .hero-container >h1 {
 
         color: #fff;
@@ -82,9 +83,34 @@
    
  }
 
+ @media screen and (max-width:540px) and (min-width:200px){
+   .hero-container >h1 {
+
+       color: #fff;
+       font-size: 30px;
+       margin-top: -100px;
+    }
+
+    .hero-container > p {
+       font-size: 15px;
+    }
+
+   .btn-mobile {
+       display: block;
+       text-decoration: none;
+   }
+
+   .btn {
+       width: 100%;
+   }
 
 
- @media screen and (max-width:468px){
+  
+}
+
+
+
+ @media screen and (min-width:280px) and (max-width:468px) and (orientation:landscape){
 
    .hero-container >h1 {
 
@@ -98,28 +124,40 @@
    }
 
    .hero-btns .btn{
-      font-size: 0.7em;
+      font-size: 0.5em ;
    }
 
-   .hero-container{
-      height: 90vh;
-    }
+  
 
+ }
+
+
+ @media screen and (min-width:468px) and (max-width:968px) and (orientation:landscape){
+
+   .hero-container >h1 {
+
+      
+      font-size: 45px;
+      margin-top: -15px;
+   }
+
+   .hero-container > p {
+      font-size: 30px;
+   }
+   .hero-btns .btn{
+      font-size: 0.5em ;
+   }
  }
 
 
  @media screen and (min-height:800px){
 
-   .hero-container{
-      height: 93vh !important;
-    }
+   
 
  }
 
  @media screen and (min-height:1000px){
 
-   .hero-container{
-      height: 96vh !important;
-    }
+  
 
  }
