--- a/src/components/Modal.css
+++ b/src/components/Modal.css
@@ -1,377 +1,36 @@
-/* Modal.css */
-
 .overlay {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.8);
-    z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.8);
+  backdrop-filter: blur(5px);
+  z-index: 1000;
+}
+
+.cardContainer {
+  width: 90%;
+  max-width: 600px;
+  padding: 20px;
+  box-sizing: border-box;
+}
+
+.modalTitle {
+  font-size: 1.5em;
+}
+
+@media screen and (max-width: 480px) {
+  .modalTitle {
+    font-size: 1.2em;
   }
-  
-  .modalContainer {
-    display: flex;
-    background: #fff;
-    justify-content: center;
-    align-items: center;
-    max-width: 2000px; /* Adjust the maximum width of the modal */
-    width: 100%;
-    padding: 40px; /* Adjust padding to increase the height */
-    box-sizing: border-box;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+@media screen and (max-width: 360px) {
+  .modalTitle {
+    font-size: 1em;
   }
-  
-  .modalImage {
-    max-width: 100%;
-    height: auto;
-    border-radius: 8px;
-  }
-  
-  .modalRight {
-    flex-grow: 1;
-    margin-left: 20px;
-  }
-  
-
-  
-  .content  {
-    padding-bottom:2rem;
-    
-  }
-
- 
-  h2{
-    
-    padding: 1rem 0;
-  }
-  
-  /* Add additional styling as needed */
-
-
-
-
-  @media screen and (max-width: 280px) and (orientation: landscape) {
-
-
-    .modalContainer {
-      width: 130px;
-     
-      flex-direction: column;
-      padding: 0px ;
-    }
-  
-   
-  
-    p {
-      font-size: 0.7em ; 
-    }
-  
-    h2 {
-      font-size: 1em ; 
-      padding: 0.5rem 0 ; 
-    }
-
-
-    .MuiBox-root,css-d0uhtl{
-      font-size: 10px;
-    }
-
-
-  }
-
-
-  @media screen and (min-width: 121px) and (max-width: 280px) {
-
-
-    .modalContainer {
-        padding: 20px;
-        width: 220px;
-        flex-direction: column;
-      }
-    
-
-      .content{
-        font-size: 0.6em;
-      }
-     
-    
-      p {
-        font-size: 0.7em ;
-
-      }
-      h2 {
-        font-size: 1em ;
-        padding: 1rem 0 ;
-      }
-      .css-iljtu2-MuiRating-root{
-        font-size: 1rem !important ;
-      }
-  
-      .css-d0uhtl{
-        font-size: 1em;
-      }
-
-  }
-
-
-
-   @media screen and (min-width: 281px) and (max-width: 380px) {
-
-
-    .modalContainer {
-        padding: 20px;
-        width: 260px;
-        flex-direction: column;
-      }
-    
-
-      .content{
-        font-size: 0.6em;
-      }
-     
-    
-      p {
-        font-size: 1em ;
-
-      }
-      h2 {
-        font-size: 1.4em ;
-        padding: 1rem 0 ;
-      }
-
-      .css-iljtu2-MuiRating-root{
-        font-size: 1.2rem !important ;
-      }
-  
-      .css-d0uhtl{
-        font-size: 1em;
-      }
-      
-
-  }
-
-
-  @media screen and (min-height: 280px) and (max-height: 450px) and (orientation: landscape) {
-
-
-    .modalContainer {
-      width: 500px !important;
-     
-      flex-direction: row !important;
-      padding: 0px ;
-    }
-  
-   
-  
-    p {
-      font-size: 0.7em !important ; 
-    }
-  
-    h2 {
-      font-size: 1em  !important; 
-      padding: 0.5rem 0 ; 
-    }
-
-
-    .css-d0uhtl{
-      font-size: 1em;
-    }
-
-
-  }
-
-
-    
-  @media screen and (min-width: 381px) and (max-width: 480px) {
-
-
-    .modalContainer {
-        width: 315px ; 
-        padding: 20px;
-        flex-direction: column;
-      }
-
-      .content{
-        font-size: 0.7em;
-      }
-      
-     
-    
-      p{
-        font-size: 1em;
-
-      }
-      h2{
-        font-size: 1.6em;
-        padding: 2rem 0;
-      }
-
-
-    .css-iljtu2-MuiRating-root{
-      font-size: 1rem ;
-    }
-
-    .css-d0uhtl{
-      font-size: 1.2em;
-    }
-
-  }
-
-
-
-
-  /* @media screen and (max-height: 680px) and (orientation: landscape) {
-
-
-    .modalContainer {
-      width: 450px ;
-
-     
-      flex-direction: column;
-      padding: 40px ;
-    }
-  
-   
-  
-    p {
-      font-size: 0.7em ; 
-    }
-  
-    h2 {
-      font-size: 1em ; 
-      padding: 0.5rem 0 ; 
-    }
-
-
-    .MuiBox-root,css-d0uhtl{
-      font-size: 10px;
-    }
-
-
-  } */
-
-
-
-
-
-  @media screen and (min-width: 481px) and (max-width: 780px) {
-
-
-    .modalContainer {
-        width: 450px; 
-        padding: 20px;
-        flex-direction: column;
-      }
-
-      .content{
-        font-size: 0.7em;
-      }
-      
-     
-    
-      p {
-        font-size: 1em ;
-
-      }
-      h2 {
-        font-size: 1.6em ;
-        padding: 2rem 0 ;
-      }
-
-  }
-
-
-  @media screen and (min-width: 781px) and (max-width: 1024px) {
-
-
-    .modalContainer {
-        max-width: 850px; 
-        padding: 20px;
-        
-      }
-
-      .content{
-        font-size: 0.7em;
-      }
-      
-     
-    
-      p {
-        font-size: 1.3em;
-
-      }
-      h2 {
-        font-size: 2em;
-        padding: 2rem 0;
-      }
-
-  }
-
-
-
-
-
-  @media screen and (min-width: 1025px) and (max-width: 1440px){
-
-
-    .modalContainer {
-
-      width: 1250px;
-    
-    }
-
-    .content h2{
-      font-size: 2.1em ;
-    }
-
-    .content p {
-      font-size: 1.5em ;
-    }
-
-    .css-iljtu2-MuiRating-root{
-      font-size: 2rem !important ;
-    }
-
-    .css-d0uhtl{
-      font-size: 2em;
-    }
-  
-
-  }
-
-
-  @media screen and (min-width: 1441px) and (max-width: 2560px){
-
-    .modalContainer{
-      display: flex;
-      background: #fff;
-      justify-content: center;
-      align-items: center;
-      width: 1600px; /* Adjust the maximum width of the modal */
-      padding: 40px; /* Adjust padding to increase the height */
-      box-sizing: border-box;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-    }
-
-    .content h2{
-      font-size: 2.4em ;
-    }
-
-    .content p {
-      font-size: 1.8em ;
-    }
-
-    .css-iljtu2-MuiRating-root{
-      font-size: 3rem  !important;
-    }
-
-    .css-d0uhtl{
-      font-size: 2.4em;
-    }
-  }
+}
